# santosuruh

./: .gitignore  .hintrc  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
src/: db.sqlite3
src/api/: serializer.py  views.py
src/app_profile/: admin.py  apps.py  signals.py  urls.py
src/app_profile/migrations/: 0001_initial.py
src/app_rtchat/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/app_rtchat/migrations/: 0001_initial.py
src/app_rtchat/templates/: backup_chat.html  chat.html
src/base/: base.css  urls.py  views.py
src/base/static/css/: base.css
src/base/static/style/: index.css
src/base/templates/: base.css  home.html  index.html  login.html  navbar.html
src/base/templates/account/: login.html  logout.html
src/webapp/: settings.py  urls.py
src/webapp/users/: adapter.py
